chore(ui): DOMA-5179 review fixes: use fstring, rename props and export useful variables

--- a/packages/ui/src/components/RadioGroup/style.less
+++ b/packages/ui/src/components/RadioGroup/style.less
@@ -20,14 +20,14 @@
       align-items: center;
       cursor: pointer;
 
-      & span:first-child {
+      & .condo-radio-group-icon {
         margin-right: @condo-global-spacing-12;
       }
     }
   }
 
   & > .condo-radio-group-container.open {
-    & > .condo-radio-group-title > span:first-child {
+    & > .condo-radio-group-title > .condo-radio-group-icon {
       transform: rotate(180deg);
     }
 
