style(ui): DOMA-5179 change radio button input size

--- a/packages/ui/src/components/Radio/style.less
+++ b/packages/ui/src/components/Radio/style.less
@@ -4,7 +4,7 @@
 @import "./mixins";
 
 @radio-border-width: @condo-global-border-width-default;
-@radio-size: (@condo-global-spacing-24);
+@radio-size: (@condo-global-spacing-24 - 2);
 @radio-top: 0;
 
 @condo-radio-inner-after-size: ((@radio-size / 2));
