fix(ui): DOMA-5242 fixed List browser support

--- a/packages/ui/src/components/List/style.less
+++ b/packages/ui/src/components/List/style.less
@@ -12,7 +12,7 @@
   .condo-list-item {
     display: flex;
     flex-wrap: nowrap;
-    align-items: end;
+    align-items: flex-end;
     width: 100%;
     border-bottom: none;
     padding: 6px 0;
