chore(ui): DOMA-5264 change arrow spacing

--- a/packages/ui/src/components/Select/style.less
+++ b/packages/ui/src/components/Select/style.less
@@ -40,9 +40,10 @@
   &-arrow {
     position: absolute;
     margin: 0;
-    top: 18px;
+    top: @condo-global-spacing-16;
     right: 12px;
     color: @condo-global-color-black;
+    height: inherit;
   }
   &-disabled:not(.condo-select-customize-input) &-arrow {
     color: @condo-global-color-gray-3;
