fix(ui): DOMA-5232 More space to MD headings and space for alerts

--- a/packages/ui/src/components/Markdown/style.less
+++ b/packages/ui/src/components/Markdown/style.less
@@ -10,7 +10,7 @@
   h4,
   h5,
   h6 {
-    margin: 1.8em 0 0.6em;
+    margin: 1.8em 0 0.8em;
 
     &:first-child {
       margin: 0 0 0.6em;
@@ -86,5 +86,9 @@
 
   table:not(:last-child) {
     margin-bottom: @condo-global-spacing-24;
+  }
+
+  .condo-alert:not(:last-child) {
+    margin-bottom: @condo-global-spacing-20;
   }
 }
