--- a/packages/ui/src/components/style/core/global.less
+++ b/packages/ui/src/components/style/core/global.less
@@ -2,3 +2,7 @@
 @import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap";
 // Monospace font is used for code blocks
 @import "https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap";
+
+:root {
+  --condo-font-fallback: sans-serif;
+}
