feat(ui): DOMA-5306 ability to center button text

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -31,6 +31,10 @@
     margin-left: @condo-button-gap;
   }
 
+  &-center-text {
+    justify-content: center;
+  }
+
   // After layer is used to show gradient outline on tab-focusing
   &:focus-visible::after {
     box-sizing: border-box;
