feat(ui): DOMA-5306 ability to left/right button text

--- a/packages/ui/src/components/Button/style.less
+++ b/packages/ui/src/components/Button/style.less
@@ -35,6 +35,14 @@
     justify-content: center;
   }
 
+  &-left-text {
+    justify-content: start;
+  }
+
+  &-right-text {
+    justify-content: end;
+  }
+
   // After layer is used to show gradient outline on tab-focusing
   &:focus-visible::after {
     box-sizing: border-box;
