feat(ui): DOMA-5232 code highlighting support added to markdown

--- a/packages/ui/src/components/style/core/global.less
+++ b/packages/ui/src/components/style/core/global.less
@@ -5,4 +5,5 @@
 
 :root {
   --condo-font-fallback: sans-serif;
+  --condo-font-fallback-mono: consolas, monaco, "Andale Mono", "Ubuntu Mono", monospace;
 }
