--- a/packages/ui/src/components/Markdown/style.less
+++ b/packages/ui/src/components/Markdown/style.less
@@ -3,6 +3,10 @@
 @import (reference) "@open-condo/ui/src/components/style/mixins/table";
 
 .condo-markdown {
+  & > * {
+    margin-bottom: @condo-global-spacing-20;
+  }
+
   // Headers margins
   h1,
   h2,
@@ -20,12 +24,6 @@
   // Images fit
   img {
     max-width: 100%;
-  }
-
-  // Display code block as block
-  pre code {
-    display: block;
-    margin: 0 0 @condo-global-typography-text-l-paragraph-spacing;
   }
 
   // Lists
@@ -90,5 +88,140 @@
 
   .condo-alert:not(:last-child) {
     margin-bottom: @condo-global-spacing-20;
+  }
+
+  pre,
+  code {
+    color: @condo-global-color-black;
+    font-size: 14px;
+    font-family: "Noto Sans Mono", var(--condo-font-fallback-mono);
+    line-height: 1.5;
+    direction: ltr;
+    white-space: pre;
+    text-align: left;
+    text-shadow: none;
+    word-break: normal;
+    word-spacing: normal;
+    tab-size: 4;
+    hyphens: none;
+  }
+
+  pre::selection,
+  code::selection {
+    text-shadow: none;
+  }
+
+  pre {
+    position: relative;
+    display: grid;
+    grid-column-gap: @condo-global-spacing-16;
+    grid-template-columns: 1fr @condo-global-spacing-20;
+    margin: @condo-global-spacing-20 0;
+    padding: @condo-global-spacing-16;
+    background: @condo-global-color-gray-1;
+    border-radius: @condo-global-border-radius-large;
+  }
+
+  pre > .condo-tag {
+    position: absolute;
+    top: 0;
+    left: @condo-global-spacing-16;
+    transform: translateY(-50%);
+  }
+
+  .code-container {
+    width: 100%;
+    overflow: auto;
+  }
+
+  .copy-text-icon {
+    cursor: pointer;
+  }
+
+  .namespace {
+    opacity: 0.7;
+  }
+
+  .token.comment,
+  .token.prolog,
+  .token.doctype,
+  .token.cdata,
+  .token.punctuation {
+    color: @condo-global-color-gray-7;
+  }
+
+  .token.property,
+  .token.tag,
+  .token.boolean,
+  .token.number,
+  .token.constant,
+  .token.symbol,
+  .token.deleted {
+    color: @condo-global-color-pink-5;
+  }
+
+  .token.selector,
+  .token.attr-name,
+  .token.string,
+  .token.char,
+  .token.builtin,
+  .token.inserted {
+    color: @condo-global-color-cyan-7;
+  }
+
+  .token.operator,
+  .token.entity,
+  .token.url,
+  .language-css .token.string,
+  .style .token.string {
+    color: @condo-global-color-brown-5;
+  }
+
+  .token.atrule,
+  .token.attr-value,
+  .token.keyword {
+    color: @condo-global-color-blue-5;
+  }
+
+  .token.function {
+    color: @condo-global-color-red-5;
+  }
+
+  .token.regex,
+  .token.important,
+  .token.variable {
+    color: @condo-global-color-orange-5;
+  }
+
+  .token.important,
+  .token.bold {
+    font-weight: bold;
+  }
+
+  .token.italic {
+    font-style: italic;
+  }
+
+  .token.entity {
+    cursor: help;
+  }
+
+  .line-highlight {
+    position: absolute;
+    right: 0;
+    left: 0;
+    z-index: 0;
+    margin-top: 1em;
+    /* stylelint-disable */
+    padding-top: inherit;
+    padding-right: 0;
+    padding-bottom: inherit;
+    padding-left: 0;
+    /* stylelint-enable */
+    line-height: inherit;
+    white-space: pre;
+    background: @condo-global-color-gray-3;
+    box-shadow: inset 5px 0 0 @condo-global-color-gray-5;
+    pointer-events: none;
   }
 }
