fix(ui): DOMA-5232 removed rehype-prism-plus because of lack of SSR support

--- a/packages/ui/src/components/Markdown/style.less
+++ b/packages/ui/src/components/Markdown/style.less
@@ -118,6 +118,7 @@
     grid-template-columns: 1fr @condo-global-spacing-20;
     margin: @condo-global-spacing-20 0;
     padding: @condo-global-spacing-16;
+    overflow: visible;
     background: @condo-global-color-gray-1;
     border-radius: @condo-global-border-radius-large;
   }
