chore(dev-portal): DOMA-5232 minor styling improvements

--- a/packages/ui/src/components/Markdown/style.less
+++ b/packages/ui/src/components/Markdown/style.less
@@ -123,6 +123,10 @@
     border-radius: @condo-global-border-radius-large;
   }
 
+  pre[class*="language-"] {
+    padding: @condo-global-spacing-20 @condo-global-spacing-16;
+  }
+
   pre > .condo-tag {
     position: absolute;
     top: 0;
