fix(ui): DOMA-5066 moved the icons to visual center

--- a/packages/ui/src/components/Carousel/style.less
+++ b/packages/ui/src/components/Carousel/style.less
@@ -29,8 +29,8 @@
 
   & .slick-arrow {
     display: flex !important;
+    gap: (@condo-carousel-arrow-width / 4);
     align-items: center;
-    justify-content: center;
     box-sizing: border-box;
     color: @condo-global-color-gray-7;
     border: @condo-global-border-width-default solid @condo-global-color-white;
