--- a/packages/ui/src/components/Carousel/style.less
+++ b/packages/ui/src/components/Carousel/style.less
@@ -1,9 +1,10 @@
 @import "antd/lib/carousel/style/index.less";
 @import (reference) "@open-condo/ui/src/tokens/variables.less";
+@import (reference) "@open-condo/ui/src/components/_utils/controls/style.less";
+
 @carousel-dot-width: 8px;
 @carousel-dot-height: 8px;
 @carousel-dot-active-width: 8px;
-@condo-carousel-arrow-width: @condo-global-spacing-40;
 @condo-carousel-slide-gap: @condo-global-spacing-40;
 
 .condo-carousel {
@@ -28,41 +29,35 @@
   }
 
   & .slick-arrow {
-    display: flex !important;
-    gap: (@condo-carousel-arrow-width / 4);
-    align-items: center;
-    box-sizing: border-box;
-    color: @condo-global-color-gray-7;
-    border: @condo-global-border-width-default solid @condo-global-color-white;
-    transition-timing-function: ease-out;
-    transition-duration: @condo-global-transition-duration-default;
-    transition-property: color, border;
+    &.condo-control-large {
+      margin-top: (-@condo-control-lg-size / 2);
+    }
+
+    &.condo-control-small {
+      margin-top: (-@condo-control-sm-size / 2);
+    }
 
     &,
     &:hover {
       position: absolute;
       top: 50%;
       z-index: 1;
-      width: @condo-carousel-arrow-width;
-      height: @condo-carousel-arrow-width;
-      margin-top: (-@condo-carousel-arrow-width / 2);
-      background: @condo-global-color-white;
-      border-radius: (@condo-carousel-arrow-width / 2);
-      box-shadow: @condo-global-box-shadow-default;
     }
 
-    &:hover {
-      color: @condo-global-color-black;
-      border: @condo-global-border-width-default solid @condo-global-color-gray-3;
+    &.slick-next.condo-control-large {
+      right: (-@condo-control-lg-size / 2);
     }
 
-    &.slick-next {
-      right: (-@condo-carousel-arrow-width / 2);
+    &.slick-next.condo-control-small {
+      right: (-@condo-control-sm-size / 2);
     }
 
-    &.slick-prev {
-      left: (-@condo-carousel-arrow-width / 2);
-      transform: scaleX(-1);
+    &.slick-prev.condo-control-large {
+      left: (-@condo-control-lg-size / 2);
+    }
+
+    &.slick-prev.condo-control-small {
+      left: (-@condo-control-sm-size / 2);
     }
 
     &.slick-disabled {
@@ -70,12 +65,26 @@
     }
   }
 
+  & .slick-slide > div {
+    margin: 0 (@condo-carousel-slide-gap / 2);
+  }
+
   & .slick-list {
     margin: 0 (-@condo-carousel-slide-gap / 2);
     padding: @condo-global-spacing-20 0;
-  }
 
-  & .slick-slide > div {
-    margin: 0 (@condo-carousel-slide-gap / 2);
+    // NOTE: Force all slides to have same width
+    & > .slick-track {
+      display: flex;
+
+      & > .slick-slide {
+        height: inherit;
+
+        & > div,
+        & > div > section {
+          height: 100%;
+        }
+      }
+    }
   }
 }
