feat(condo): DOMA-5320 added ticket quality control * feat(condo): DOMA-5320 updated pages with new component * feat(condo): DOMA-5320 updated ticket filter templates * chore(condo): DOMA-5320 updated submodule * fix(condo): DOMA-5320 fixed layout * feat(condo): DOMA-5320 added field "qualityControlUpdatedBy" in Ticket * feat(condo): DOMA-5320 forbade the resident to update quality control in ticket * feat(condo): DOMA-5320 added counter for quality control comment

--- a/packages/ui/src/components/Typography/style.less
+++ b/packages/ui/src/components/Typography/style.less
@@ -9,6 +9,10 @@
   color: @condo-global-color-black;
   word-break: break-word;
 
+  &-break-spaces {
+    white-space: break-spaces;
+  }
+
   &,
   &-large {
     .condo-typography-text-large();
