fix(ui): DOMA-5751 Removed last item margin in MD

--- a/packages/ui/src/components/Markdown/style.less
+++ b/packages/ui/src/components/Markdown/style.less
@@ -7,6 +7,10 @@
     margin-bottom: @condo-global-spacing-20;
   }
 
+  & > *:last-child {
+    margin-bottom: 0;
+  }
+
   // Headers margins
   h1,
   h2,
