--- a/packages/ui/src/components/Modal/style.less
+++ b/packages/ui/src/components/Modal/style.less
@@ -1,5 +1,6 @@
 @import "antd/lib/modal/style/index.less";
 @import (reference) "@open-condo/ui/src/tokens/variables.less";
+@import (reference) "@open-condo/ui/src/components/style/core/breakpoints.less";
 
 @condo-modal-margin-vertical: @condo-global-spacing-40;
 @condo-modal-margin-horizontal: @condo-global-spacing-40;
@@ -14,6 +15,8 @@
 @condo-modal-header-padding-right: (@condo-modal-padding * 2) + @condo-modal-close-icon-width;
 @condo-modal-header-scrolling-border-bottom-color: @condo-global-color-gray-3;
 @condo-modal-footer-buttons-gap: @condo-global-spacing-20;
+@condo-modal-mobile-spacing: @condo-global-spacing-24;
+@condo-modal-mobile-header-padding-right: @condo-modal-mobile-spacing + @condo-modal-close-icon-width;
 
 .condo-modal-root {
   .condo-modal-mask {
@@ -80,6 +83,7 @@
         width: fit-content;
         min-width: 100%;
         overflow: hidden;
+        padding: 1px;
       }
     }
 
@@ -87,8 +91,57 @@
       padding: @condo-modal-half-padding-without-border @condo-modal-padding @condo-modal-half-padding;
       border-top: @condo-global-border-width-default solid @condo-modal-header-scrolling-border-bottom-color;
 
-      .condo-btn + .condo-btn:not(.condo-dropdown-trigger, :first-child) {
+      > .condo-btn + .condo-btn:not(.condo-dropdown-trigger) {
         margin-left: 0;
+      }
+    }
+
+    @media @from-mobile-small @to-tablet-small {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: initial;
+      max-width: 100%;
+      width: auto !important;
+      margin: @condo-global-spacing-16;
+
+      .condo-modal-header {
+        padding:
+                @condo-modal-mobile-spacing
+                @condo-modal-mobile-header-padding-right
+                @condo-modal-mobile-spacing
+                @condo-modal-mobile-spacing;
+      }
+
+      .condo-modal-close {
+        top: @condo-modal-mobile-spacing;
+        right: @condo-modal-mobile-spacing;
+      }
+
+      .condo-modal-body {
+        margin: 0 @condo-modal-mobile-spacing;
+        padding: 0 0 @condo-modal-mobile-spacing;
+      }
+
+      .condo-modal-footer {
+        padding: @condo-modal-mobile-spacing;
+
+        > .condo-btn {
+          width: 100%;
+
+          &:not(:first-child) {
+            margin-top: @condo-global-spacing-16;
+          }
+        }
+      }
+    }
+
+    @media @from-tablet-large {
+      .condo-modal-footer {
+        > .condo-btn + .condo-btn:not(.condo-dropdown-trigger, :first-child) {
+          margin-left: @condo-global-spacing-16;
+        }
       }
     }
   }
