feat(ui): DOMA-5995 added Typography primary and inherit type.
All typography is now of type primary by default. Typography.Text and Typography.Paragraph can now explicitly have an "inherit" type that allows them to inherit color from their parent element. Most elements now default to color #222 instead of the default #000

--- a/packages/ui/src/components/Typography/style.less
+++ b/packages/ui/src/components/Typography/style.less
@@ -6,7 +6,6 @@
 .condo-typography {
   @condo-typography-decoration-thickness: 1px;
 
-  color: @condo-global-color-black;
   word-break: break-word;
 
   &-break-spaces {
@@ -24,6 +23,10 @@
 
   &-small {
     .condo-typography-text-small();
+  }
+
+  &-primary {
+    color: @condo-global-color-black;
   }
 
   &-secondary {
@@ -48,6 +51,10 @@
 
   &-danger {
     color: @condo-global-color-red-5;
+  }
+
+  &-inherit {
+    color: inherit;
   }
 
   &-disabled {
